--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -17,7 +17,7 @@ set(EDITOR_HEADER_FILES
     ${EDITOR_HEADER_DIR}/PropertyRequests.h
     ${EDITOR_HEADER_DIR}/PropertyDelegate.h
     ${EDITOR_HEADER_DIR}/PropertyPopulate.h
-    ${EDITOR_HEADER_DIR}/PropertyDeliver.h
+    ${EDITOR_HEADER_DIR}/PropertyApply.h
     ${EDITOR_HEADER_DIR}/PropertyRoles.h)
 set(EDITOR_SOURCE_FILES 
     ${EDITOR_SOURCE_DIR}/main.cpp
@@ -25,7 +25,7 @@ set(EDITOR_SOURCE_FILES
     ${EDITOR_SOURCE_DIR}/LevelScene.cpp
     ${EDITOR_SOURCE_DIR}/PropertyDelegate.cpp
     ${EDITOR_SOURCE_DIR}/PropertyPopulate.cpp
-    ${EDITOR_SOURCE_DIR}/PropertyDeliver.cpp)
+    ${EDITOR_SOURCE_DIR}/PropertyApply.cpp)
 
 source_group("editor\\headers" FILES ${EDITOR_HEADER_FILES})
 source_group("editor\\sources" FILES ${EDITOR_SOURCE_FILES})
